# makepad

./: AGENTS.md  Cargo.toml  makepad.splash  splash.md  splash2.md
.github/workflows/: ci.yml
draw/: Cargo.toml
draw/src/: image_cache.rs  lib.rs  overlay.rs  turtle.rs
draw/src/shader/: draw_glyph.rs  draw_svg.rs  draw_text.rs
draw/src/text/: fonts.rs  layouter.rs  loader.rs  slug_atlas.rs
examples/aichat/src/: main.rs
examples/bugfix/: Cargo.toml
examples/bugfix/src/: main.rs
examples/comfyui/src/: app.rs  edmx.rs
examples/glass/: Cargo.toml
examples/glass/src/: main.rs
examples/isolate/: Cargo.toml
examples/isolate/src/: main.rs
examples/move_after_draw/: Cargo.toml
examples/move_after_draw/src/: main.rs
examples/splash/src/: main.rs
examples/uizoo/src/: tab_image.rs
examples/xr/src/: align_test.rs  main.rs
libs/apple_sys/src/: lib.rs
libs/gltf/src/: image.rs
libs/llama/: Cargo.toml
libs/toml_parser/src/: toml.rs
libs/tsdf/src/: lib.rs
libs/zune/zune-bmp/: Cargo.toml
libs/zune/zune-bmp/src/: common.rs  decoder.rs  errors.rs  lib.rs
platform/script/src/: gc.rs  (+7 more)
platform/src/: action.rs  app_icon.rs  app_main.rs  cx.rs  cx_api.rs  display_context.rs  draw_list.rs  draw_shader.rs  draw_vars.rs  id_pool.rs  ime.rs  lib.rs  window.rs
widgets/src/: animator.rs  gauss_view.rs  glass_panel.rs  image.rs  image_cache.rs  keyboard_view.rs  lib.rs  math_view.rs  modal.rs  portal_list.rs  scroll_bar.rs  scroll_bars.rs  splash.rs  text_flow.rs  text_input.rs  video.rs  view.rs  widget.rs  widget_async.rs  window.rs
xr/src/: lib.rs
(+82 files in other folders)
